# mkdocs-macros-includex

./: .gitignore  CHANGELOG.md  LICENSE  README.md  includex.py  macros.py  mkdocs.yml  pyproject.toml  test_includex.py
.github/workflows/: docs.yaml  test.yaml
docs/: custom.css  index.md  macros.py  reference.md
docs/_features/: caption.md  lang.md
