[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mkdocs-macros-includex"
dynamic = ["version"]
description = "Provides the `includex` macro for more flexible includes."
readme = "README.md"
license = "MIT"
authors = [{ name = "Jannis Mainczyk", email = "jmainczyk@gmail.com" }]
requires-python = ">=3.10"

[tool.hatch.version]
path = "includex.py"

[tool.hatch.envs.default]
dependencies = ["coverage[toml]", "black", "pytest", "pytest-cov", "ruff"]
scripts = { "test" = "hatch run test:test", "docs" = "hatch run docs:serve" }

[tool.hatch.envs.test]
dependencies = ["pytest", "pytest-cov"]
scripts = { "test" = "pytest --cov-config=pyproject.toml --cov-report=term-missing --cov-report html:build/coverage --cov=includex --cov=test_includex" }

[tool.coverage.report]
omit = ["**/setup.py", "**/__init__.py", "**/__main__.py"]
exclude_lines = ["if __name__ == .__main__."]


[[tool.hatch.envs.test.matrix]]
python = ["3.10", "3.11"]

[tool.hatch.envs.docs]
dependencies = [
    "mkdocs-material",
    "mkdocs-macros-plugin",
    "mkdocstrings[python]",
    "mkdocs-autorefs",
]
[tool.hatch.envs.docs.scripts]
serve = "mkdocs serve --watch includex.py --dev-addr localhost:54321"
build = "mkdocs build"

[tool.ruff]
line-length = 100
[tool.black]
line-length = 100
